simple soccer kick traj generation

--- a/examples/notebooks/whole_body_manipulation.ipynb
+++ b/examples/notebooks/whole_body_manipulation.ipynb
@@ -36,9 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: to-Python converter for boost::shared_ptr<hpp::fcl::CollisionGeometry> already registered; second conversion method ignored.\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "import crocoddyl\n",
     "import example_robot_data\n",
@@ -79,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,13 +148,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def createSequence(dmodels, DT, N):\n",
     "    return [[crocoddyl.IntegratedActionModelEuler(m, DT)] * N +\n",
     "            [crocoddyl.IntegratedActionModelEuler(m, 0.)] for m in dmodels]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting meshcat\n",
+      "  Using cached meshcat-0.3.2-py3-none-any.whl (2.6 MB)\n",
+      "Requirement already satisfied: pillow>=7.0.0 in /home/dan/.local/lib/python3.6/site-packages (from meshcat) (8.4.0)\n",
+      "Collecting u-msgpack-python>=2.4.1\n",
+      "  Using cached u_msgpack_python-2.7.1-py2.py3-none-any.whl (10.0 kB)\n",
+      "Requirement already satisfied: tornado>=4.0.0 in /home/dan/.local/lib/python3.6/site-packages (from meshcat) (6.1)\n",
+      "Requirement already satisfied: numpy>=1.14.0 in /home/dan/.local/lib/python3.6/site-packages (from meshcat) (1.19.5)\n",
+      "Requirement already satisfied: pyzmq>=17.0.0 in /home/dan/.local/lib/python3.6/site-packages (from meshcat) (24.0.1)\n",
+      "Collecting pyngrok>=4.1.6\n",
+      "  Using cached pyngrok-5.1.0.tar.gz (745 kB)\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hRequirement already satisfied: ipython>=5 in /home/dan/.local/lib/python3.6/site-packages (from meshcat) (7.16.3)\n",
+      "Requirement already satisfied: decorator in /usr/lib/python3/dist-packages (from ipython>=5->meshcat) (4.1.2)\n",
+      "Requirement already satisfied: pexpect in /usr/lib/python3/dist-packages (from ipython>=5->meshcat) (4.2.1)\n",
+      "Requirement already satisfied: backcall in /home/dan/.local/lib/python3.6/site-packages (from ipython>=5->meshcat) (0.2.0)\n",
+      "Requirement already satisfied: jedi<=0.17.2,>=0.10 in /home/dan/.local/lib/python3.6/site-packages (from ipython>=5->meshcat) (0.17.2)\n",
+      "Requirement already satisfied: setuptools>=18.5 in /usr/lib/python3/dist-packages (from ipython>=5->meshcat) (39.0.1)\n",
+      "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in /home/dan/.local/lib/python3.6/site-packages (from ipython>=5->meshcat) (3.0.32)\n",
+      "Requirement already satisfied: traitlets>=4.2 in /home/dan/.local/lib/python3.6/site-packages (from ipython>=5->meshcat) (4.3.3)\n",
+      "Requirement already satisfied: pickleshare in /home/dan/.local/lib/python3.6/site-packages (from ipython>=5->meshcat) (0.7.5)\n",
+      "Requirement already satisfied: pygments in /home/dan/.local/lib/python3.6/site-packages (from ipython>=5->meshcat) (2.13.0)\n",
+      "Requirement already satisfied: PyYAML in /usr/lib/python3/dist-packages (from pyngrok>=4.1.6->meshcat) (3.12)\n",
+      "Requirement already satisfied: parso<0.8.0,>=0.7.0 in /home/dan/.local/lib/python3.6/site-packages (from jedi<=0.17.2,>=0.10->ipython>=5->meshcat) (0.7.1)\n",
+      "Requirement already satisfied: wcwidth in /home/dan/.local/lib/python3.6/site-packages (from prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0->ipython>=5->meshcat) (0.2.5)\n",
+      "Requirement already satisfied: six in /usr/lib/python3/dist-packages (from traitlets>=4.2->ipython>=5->meshcat) (1.11.0)\n",
+      "Requirement already satisfied: ipython-genutils in /home/dan/.local/lib/python3.6/site-packages (from traitlets>=4.2->ipython>=5->meshcat) (0.2.0)\n",
+      "Building wheels for collected packages: pyngrok\n",
+      "  Building wheel for pyngrok (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for pyngrok: filename=pyngrok-5.1.0-py3-none-any.whl size=21924 sha256=e2ded30a472c55d3e23458ae458479690f70ce2472f810f9e8372ee11d6377de\n",
+      "  Stored in directory: /home/dan/.cache/pip/wheels/62/25/ec/151d7602940816350ae9819234fcdf2375dd8ac802332795fc\n",
+      "Successfully built pyngrok\n",
+      "Installing collected packages: u-msgpack-python, pyngrok, meshcat\n",
+      "Successfully installed meshcat-0.3.2 pyngrok-5.1.0 u-msgpack-python-2.7.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip3 install meshcat "
    ]
   },
   {
@@ -157,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,9 +247,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ArgumentError",
+     "evalue": "Python argument types in\n    CostModelFramePlacement.__init__(CostModelFramePlacement, StateMultibody, ActivationModelWeightedQuad, int, SE3, int)\ndid not match C++ signature:\n    __init__(_object* self, boost::shared_ptr<crocoddyl::StateMultibodyTpl<double> > state, crocoddyl::FramePlacementTpl<double> Mref)\n    __init__(_object* self, boost::shared_ptr<crocoddyl::StateMultibodyTpl<double> > state, crocoddyl::FramePlacementTpl<double> Mref, int nu)\n    __init__(_object* self, boost::shared_ptr<crocoddyl::StateMultibodyTpl<double> > state, boost::shared_ptr<crocoddyl::ActivationModelAbstractTpl<double> > activation, crocoddyl::FramePlacementTpl<double> Mref)\n    __init__(_object* self, boost::shared_ptr<crocoddyl::StateMultibodyTpl<double> > state, boost::shared_ptr<crocoddyl::ActivationModelAbstractTpl<double> > activation, crocoddyl::FramePlacementTpl<double> Mref, int nu)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mArgumentError\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-a93daa6bd1e7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Creating a running model for the target\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mdmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreateActionModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mseqs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreateSequence\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdmodel\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-2-917661ce4246>\u001b[0m in \u001b[0;36mcreateActionModel\u001b[0;34m(target)\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mlh_Mref\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpin\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSE3\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meye\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mactivation_hand\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcrocoddyl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mActivationModelWeightedQuad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mw_hand\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0mlh_cost\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcrocoddyl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCostModelFramePlacement\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mactivation_hand\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlh_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlh_Mref\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mactuation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnu\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m     \u001b[0mcosts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maddCost\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"lh_goal\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlh_cost\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1e2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mArgumentError\u001b[0m: Python argument types in\n    CostModelFramePlacement.__init__(CostModelFramePlacement, StateMultibody, ActivationModelWeightedQuad, int, SE3, int)\ndid not match C++ signature:\n    __init__(_object* self, boost::shared_ptr<crocoddyl::StateMultibodyTpl<double> > state, crocoddyl::FramePlacementTpl<double> Mref)\n    __init__(_object* self, boost::shared_ptr<crocoddyl::StateMultibodyTpl<double> > state, crocoddyl::FramePlacementTpl<double> Mref, int nu)\n    __init__(_object* self, boost::shared_ptr<crocoddyl::StateMultibodyTpl<double> > state, boost::shared_ptr<crocoddyl::ActivationModelAbstractTpl<double> > activation, crocoddyl::FramePlacementTpl<double> Mref)\n    __init__(_object* self, boost::shared_ptr<crocoddyl::StateMultibodyTpl<double> > state, boost::shared_ptr<crocoddyl::ActivationModelAbstractTpl<double> > activation, crocoddyl::FramePlacementTpl<double> Mref, int nu)"
+     ]
+    }
+   ],
    "source": [
     "DT, N = 5e-2, 20\n",
     "target = np.array([0.4, 0, 1.2])\n",
@@ -381,21 +453,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.17"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
